--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yuguo.bbvainnovation">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon"
@@ -11,15 +16,19 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".videoview"
-            android:background="#293690">
+            android:name=".Welcome">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".FaceRecognition"
+            android:background="#293690">
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
